# kb-system

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: product-intro.md  social-media.md  technical-report.md
scripts/: kb  kb_mcp.py
skills/: README.md  dialogue-ingest.md
src/: __init__.py  api.py  config.py  database.py  embeddings.py  ingest.py  pipeline.py  vault_reader.py  vault_writer.py
static/: index.html
tests/: test_database.py  test_vault_reader.py  test_vault_writer.py
