[project]
name = "kb-system"
version = "0.1.0"
description = "个人知识图谱构建与管理Agent"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "sentence-transformers>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
